Added test scenario script Plus minor fixes